refactor(core): 降低Java版本要求并移除版本检查
- 将目标Java版本从17降至8以提高兼容性
- 移除Minecraft版本检查逻辑和相关常量
- 更新NBT-API依赖版本从2.15.5至2.13.2以支持更广版本范围
- 修改plugin.yml中的api-version从1.20至1.15
- 更新配置管理器中Set.of()为HashSet构造方式
- 在命令处理器中统一使用Collections.emptyList()
- 简化README.md中的兼容性表格和依赖说明
- 移除客户端版本要求相关的FAQ说明